new methods to improve student teacher and comparing them

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
     "from fair_teacher_student_classifier import FairTeacherStudentClassifier\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
@@ -15,12 +14,13 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "4              30  United-States  <=50K  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,17 +200,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\trdin\\AppData\\Local\\Temp\\ipykernel_22564\\2974537177.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
-      "  print(df.groupby('race')['class'].value_counts(normalize=True))\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -227,6 +219,14 @@
       "White               <=50K    0.746013\n",
       "                    >50K     0.253987\n",
       "Name: proportion, dtype: float64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\trdin\\AppData\\Local\\Temp\\ipykernel_1740\\2974537177.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "  print(df.groupby('race')['class'].value_counts(normalize=True))\n"
      ]
     },
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,55 +274,101 @@
     "z = df['race']  # Sensitive attribute\n",
     "\n",
     "# Train-test split\n",
-    "X_train, X_test, y_train, y_test, z_train, z_test = train_test_split(X, y, z, test_size=0.3, random_state=42, stratify=y)\n"
+    "X_train, X_test, y_train, y_test, z_train, z_test = train_test_split(X, y, z, test_size=0.2, random_state=42, stratify=y)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Instantiate classifiers\n",
-    "fair_classifier = FairTeacherStudentClassifier(RandomForestClassifier)\n",
-    "baseline_classifier = RandomForestClassifier()\n",
-    "\n",
-    "# Train classifiers\n",
-    "fair_classifier.fit(X_train, y_train, z_train)\n",
-    "baseline_classifier.fit(X_train, y_train)\n",
-    "\n",
-    "# Predictions\n",
-    "fair_predictions = fair_classifier.predict(X_test)\n",
-    "baseline_predictions = baseline_classifier.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                    FairClassifier Accuracy  Baseline Accuracy\n",
-      "White                              0.853794           0.852108\n",
-      "Black                              0.923182           0.927260\n",
-      "Other                              0.914062           0.929688\n",
-      "Asian-Pac-Islander                 0.819957           0.806941\n",
-      "Amer-Indian-Eskimo                 0.891304           0.891304\n"
+      "Min accuracy group: 2\n",
+      "Min accuracy group: 1\n"
      ]
     }
    ],
    "source": [
+    "# Instantiate classifiers\n",
+    "fair_classifier_mode_0 = FairTeacherStudentClassifier(RandomForestClassifier)\n",
+    "fair_classifier_mode_1 = FairTeacherStudentClassifier(RandomForestClassifier)\n",
+    "fair_classifier_split_mode_0 = FairTeacherStudentClassifier(RandomForestClassifier)\n",
+    "fair_classifier_split_mode_1 = FairTeacherStudentClassifier(RandomForestClassifier)\n",
+    "baseline_classifier = RandomForestClassifier()\n",
+    "\n",
+    "# Train classifiers\n",
+    "fair_classifier_mode_0.fit(X_train, y_train, z_train, mode=0)\n",
+    "fair_classifier_mode_1.fit(X_train, y_train, z_train, mode=1)\n",
+    "fair_classifier_split_mode_0.fit_split(X_train, y_train, z_train, mode=0)\n",
+    "fair_classifier_split_mode_1.fit_split(X_train, y_train, z_train, mode=1)\n",
+    "baseline_classifier.fit(X_train, y_train)\n",
+    "\n",
+    "# Predictions\n",
+    "fair_predictions_mode_0 = fair_classifier_mode_0.predict(X_test)\n",
+    "fair_predictions_mode_1 = fair_classifier_mode_1.predict(X_test)\n",
+    "fair_predictions_split_mode_0 = fair_classifier_split_mode_0.predict(X_test)\n",
+    "fair_predictions_split_mode_1 = fair_classifier_split_mode_1.predict(X_test)\n",
+    "baseline_predictions = baseline_classifier.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    FairClassifier Mode 0 Accuracy  \\\n",
+      "Amer-Indian-Eskimo                        0.916667   \n",
+      "Asian-Pac-Islander                        0.807074   \n",
+      "Black                                     0.928719   \n",
+      "Other                                     0.914634   \n",
+      "White                                     0.853705   \n",
+      "\n",
+      "                    FairClassifier Mode 1 Accuracy  \\\n",
+      "Amer-Indian-Eskimo                        0.927083   \n",
+      "Asian-Pac-Islander                        0.803859   \n",
+      "Black                                     0.924587   \n",
+      "Other                                     0.926829   \n",
+      "White                                     0.852262   \n",
+      "\n",
+      "                    FairClassifier Split Mode 0 Accuracy  \\\n",
+      "Amer-Indian-Eskimo                              0.947917   \n",
+      "Asian-Pac-Islander                              0.816720   \n",
+      "Black                                           0.922521   \n",
+      "Other                                           0.939024   \n",
+      "White                                           0.856232   \n",
+      "\n",
+      "                    FairClassifier Split Mode 1 Accuracy  Baseline Accuracy  \n",
+      "Amer-Indian-Eskimo                              0.947917           0.927083  \n",
+      "Asian-Pac-Islander                              0.810289           0.797428  \n",
+      "Black                                           0.919421           0.925620  \n",
+      "Other                                           0.890244           0.926829  \n",
+      "White                                           0.854066           0.852502  \n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
     "# Compare accuracy by race\n",
     "results = {}\n",
-    "for group in z_test.unique():\n",
+    "for group in np.unique(z_test):\n",
     "    mask = (z_test == group)\n",
-    "    fair_accuracy = accuracy_score(y_test[mask], fair_predictions[mask])\n",
+    "    fair_accuracy_mode_0 = accuracy_score(y_test[mask], fair_predictions_mode_0[mask])\n",
+    "    fair_accuracy_mode_1 = accuracy_score(y_test[mask], fair_predictions_mode_1[mask])\n",
+    "    fair_accuracy_split_mode_0 = accuracy_score(y_test[mask], fair_predictions_split_mode_0[mask])\n",
+    "    fair_accuracy_split_mode_1 = accuracy_score(y_test[mask], fair_predictions_split_mode_1[mask])\n",
     "    baseline_accuracy = accuracy_score(y_test[mask], baseline_predictions[mask])\n",
-    "    results[label_encoders['race'].inverse_transform([group])[0]] = {\n",
-    "        'FairClassifier Accuracy': fair_accuracy,\n",
+    "    results[label_encoders['race'].inverse_transform([group])[0]]  = {\n",
+    "        'FairClassifier Mode 0 Accuracy': fair_accuracy_mode_0,\n",
+    "        'FairClassifier Mode 1 Accuracy': fair_accuracy_mode_1,\n",
+    "        'FairClassifier Split Mode 0 Accuracy': fair_accuracy_split_mode_0,\n",
+    "        'FairClassifier Split Mode 1 Accuracy': fair_accuracy_split_mode_1,\n",
     "        'Baseline Accuracy': baseline_accuracy\n",
     "    }\n",
     "\n",
@@ -330,6 +376,13 @@
     "results_df = pd.DataFrame(results).T\n",
     "print(results_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
