added basic curriculum student teacher model with functions for splitting data and comparison to previous models

--- a/main.ipynb
+++ b/main.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fair_teacher_student_classifier import FairTeacherStudentClassifier\n",
-    "from teacher_student_classifier import TeacherStudentClassifier\n",
+    "from weighted_model.fair_teacher_student_classifier import FairTeacherStudentClassifier\n",
+    "from weighted_model.teacher_student_classifier import TeacherStudentClassifier\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from fairlearn.datasets import fetch_adult\n",
