added fairness model comparison analyzing random state effect on SGD curriculum learning

--- a/weighted_eval/main.ipynb
+++ b/weighted_eval/main.ipynb
@@ -6,6 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Add the root directory to the Python path\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
     "from weighted_model.fair_teacher_student_classifier import FairTeacherStudentClassifier\n",
     "from weighted_model.teacher_student_classifier import TeacherStudentClassifier\n",
     "import seaborn as sns\n",
