added comments for better readability

--- a/models_eval/basic_model_compare.ipynb
+++ b/models_eval/basic_model_compare.ipynb
@@ -298,7 +298,7 @@
     "    \"\"\"Splits X and y into 5 equal parts and returns them as a list of (X_part, y_part).\"\"\"\n",
     "    split_size = len(X) // n_splits\n",
     "    \n",
-    "    # Convert probabilities to predictions\n",
+    "    # Convert probabilities to predictions, it takes in probabilities for compatibility with other functions\n",
     "    y_pred = np.argmax(y_prob, axis=1)\n",
     "\n",
     "    split_data = []\n",
