--- a/models_eval/fairness_model_compare.ipynb
+++ b/models_eval/fairness_model_compare.ipynb
@@ -379,6 +379,7 @@
     "    \"\"\"\n",
     "    Splits X and y into groups based on race, orders races by their average prediction confidence,\n",
     "    and sorts each race group by confidence.\n",
+    "    n_splits parameter is not used bu it is here for compatibility with other split functions.\n",
     "\n",
     "    Returns:\n",
     "        race_splits (dict): A dictionary where keys are race names and values are (X, y_pred) tuples.\n",
@@ -442,19 +443,21 @@
     "from sklearn.linear_model import Perceptron, PassiveAggressiveClassifier\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "\n",
-    "\n",
+    "# CurriculumStudentTeacher  SGD  and MultinomialNB with different trasnform functions\n",
     "fairness_curriculum_SGD = CurriculumStudentTeacher(teacher_type=RandomForestClassifier, student_type = SGDClassifier, transform_func= split_by_race_and_confidence, split_data=True)\n",
     "fairness_curriculum_MulNB = CurriculumStudentTeacher(teacher_type=RandomForestClassifier, student_type = MultinomialNB, transform_func= split_by_race_and_confidence, split_data=True)\n",
     "fairness_curriculum_SGD_asc = CurriculumStudentTeacher(teacher_type=RandomForestClassifier, student_type = SGDClassifier, transform_func= split_by_race_and_confidence_asc, split_data=True)\n",
     "fairness_curriculum_MulNB_asc = CurriculumStudentTeacher(teacher_type=RandomForestClassifier, student_type = MultinomialNB, transform_func= split_by_race_and_confidence_asc, split_data=True)\n",
     "\n",
+    "# WeightedCurriculumStudentTeacher with different modes for sample weights calculation\n",
     "weighted_curriculum_model_mode_0 = WeightedCurriculumStudentTeacher(teacher_type=RandomForestClassifier, student_type = SGDClassifier, transform_func= split_by_race_and_confidence , split_data=True)\n",
     "weighted_curriculum_model_mode_1 = WeightedCurriculumStudentTeacher(teacher_type=RandomForestClassifier, student_type = SGDClassifier, transform_func= split_by_race_and_confidence , split_data=True)\n",
     "\n",
-    "\n",
+    "# FairTeacherStudentClassifier the most succesfull clasifier from the previous experiments with weights\n",
     "fair_classifier_split_mode_1 = FairTeacherStudentClassifier(RandomForestClassifier, split_data=True)\n",
     "\n",
     "\n",
+    "# Multiple curriculum models for reference\n",
     "diff_MulNB = CurriculumStudentTeacher(teacher_type=RandomForestClassifier, student_type = MultinomialNB, transform_func= split_into_difficulty_parts, split_data=True, n_splits=6)\n",
     "\n",
     "curriculum_model = CurriculumStudentTeacher(teacher_type=RandomForestClassifier, student_type = SGDClassifier, transform_func= split_into_parts, split_data=False, n_splits=6)\t\n",
@@ -463,9 +466,7 @@
     "\n",
     "diff_asc_model = CurriculumStudentTeacher(teacher_type=RandomForestClassifier, student_type = SGDClassifier, transform_func= split_into_difficulty_parts_asc, split_data=False, n_splits=6)\n",
     "\n",
-    "\n",
     "#Student Teacher models for reference\n",
-    "\n",
     "baseline_split = TeacherStudentClassifier(RandomForestClassifier, split_data=True)\n",
     "\n",
     "#randomForrest for reference\n",
@@ -476,8 +477,6 @@
     "\n",
     "\n",
     "# Train classifiers\n",
-    "\n",
-    "\n",
     "diff_asc_model.fit(X_train, y_train)\n",
     "\n",
     "fairness_curriculum_SGD.fit(X_train, y_train)\n",
@@ -499,8 +498,6 @@
     "rf_classifier.fit(X_train, y_train)\n",
     "\n",
     "# Predicitons with all the models \n",
-    "\n",
-    "\n",
     "curriculum_fairness_SGD_predictions = fairness_curriculum_SGD.predict(X_test)\n",
     "curriculum_fairness_MulNB_predictions = fairness_curriculum_MulNB.predict(X_test)\n",
     "curriculum_fairness_SGD_asc_predictions = fairness_curriculum_SGD_asc.predict(X_test)\n",
@@ -849,7 +846,7 @@
    "source": [
     "# Fairness models comparison, fairness by race\n",
     "\n",
-    "# Define the three models to include\n",
+    "# Define the models to include\n",
     "selected_models = [\n",
     "    \"Fair Curriculum Model SGD\",\n",
     "    \"Fair Curriculum Model MulNB\",\n",
