added findinfgs discussion

--- a/models_eval/fairness_model_compare.ipynb
+++ b/models_eval/fairness_model_compare.ipynb
@@ -895,17 +895,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Findings  \n",
+    "\n",
+    "- The **Curriculum models** outperform the basic **SGD model**, but in terms of accuracy, they still fall short compared to the **TeacherStudent model with weights**. This could be due to the inherent limitations of the **SGDClassifier** as a student model.  \n",
+    "- **MultinomialNB** demonstrated that our curriculum learning approach has no noticeable effect on its performance. Given this, I suggest avoiding **Naive Bayes classifiers** for this task.  \n",
+    "- In terms of **fairness**, the models perform worse than the **TeacherStudent models**, which is expected if their accuracy is lower. However, they show potential, especially the **Fair Curriculum Model (SGD)**. Further analysis is needed, including fine-tuning the models.  \n",
+    "- A **larger dataset** would be beneficial, as **SGDClassifier** tends to perform better with more data.  "
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
