added a new mode to weighed curriculum model, added log_loss to sgd models, models initialize when the class is initialized, kfolds validation the folfs are stratified based on sensitive features, added a Fairness evaluator to calculate the metrics and plot the charts

--- a/models_eval/basic_model_compare.ipynb
+++ b/models_eval/basic_model_compare.ipynb
@@ -381,10 +381,10 @@
     "diff_asc_MulNB = CurriculumStudentTeacher(teacher_type=RandomForestClassifier, student_type = MultinomialNB, transform_func= split_into_difficulty_parts_asc, split_data=True, n_splits=6)\n",
     "\n",
     "#Student Teacher models for reference\n",
-    "baseline_model = TeacherStudentClassifier(RandomForestClassifier, split_data=True)\n",
+    "baseline_model = TeacherStudentClassifier(RandomForestClassifier, RandomForestClassifier, split_data=True)\n",
     "\n",
-    "baseline_split = TeacherStudentClassifier(RandomForestClassifier, split_data=True)\n",
-    "\n",
+    "baseline_split = TeacherStudentClassifier(RandomForestClassifier, RandomForestClassifier, split_data=True)\n",
+    "        \n",
     "#randomForrest for reference\n",
     "rf_classifier = RandomForestClassifier()\n",
     "sgd_classifier = SGDClassifier()\n",
