--- a/models_eval/bigger_basic_model_compare.ipynb
+++ b/models_eval/bigger_basic_model_compare.ipynb
@@ -254,7 +254,7 @@
     "df = df.drop(columns=['Income'])\n",
     "df = df.dropna()\n",
     "df = df.sample(n=200000, random_state=42).reset_index(drop=True)\n",
-    "# TODO for fairness we could me this dataset unfair by removing data for a gender\n",
+    "#  for fairness we could me this dataset unfair by removing data for a gender\n",
     "# for a gender removing only high income data and for another randomly removing data"
    ]
   },
