--- a/models_eval/k_split_fairness_model_compare.ipynb
+++ b/models_eval/k_split_fairness_model_compare.ipynb
@@ -315,7 +315,7 @@
     "skf = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
     "\n",
     "folds = []\n",
-    "for fold_idx, (train_idx, test_idx) in enumerate(skf.split(X, z)):\n",
+    "for fold_idx, (train_idx, test_idx) in enumerate(skf.split(X, y, z)): # TODO \n",
     "    X_train, X_test = X.iloc[train_idx], X.iloc[test_idx]\n",
     "    y_train, y_test = y.iloc[train_idx], y.iloc[test_idx]\n",
     "    z_train, z_test = z.iloc[train_idx], z.iloc[test_idx]\n",
